# mobile-rust-mandelbrot

./: LICENSE.txt  README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/pro/stuermer/mandelbrot/: AppModule.kt  MainActivity.kt  MandelbrotApplication.kt  MandelbrotJNI.kt
android/app/src/main/kotlin/pro/stuermer/mandelbrot/ui/: HomeScreen.kt  HomeScreenEvent.kt  HomeScreenState.kt  HomeViewModel.kt
android/app/src/main/kotlin/pro/stuermer/mandelbrot/ui/theme/: Color.kt  Theme.kt
ios/mandelbrot/: Mandelbrot-Bridging-Header.h
ios/mandelbrot/mandelbrot/: Mandelbrot.swift  MandelbrotView.swift  mandelbrotApp.swift
ios/mandelbrot/mandelbrot.xcodeproj/: project.pbxproj
ios/mandelbrot/mandelbrot.xcodeproj/project.xcworkspace/xcuserdata/tippelsk.xcuserdatad/: UserInterfaceState.xcuserstate
ios/mandelbrot/mandelbrot.xcodeproj/xcuserdata/tippelsk.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  mandelbrot.h
